kustomize/argo-workflows/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-workflows
spec: {}
status: {}
