kustomize/argo-workflows/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows
spec:
  rules:
    - host: argo-workflows.74.220.20.216.nip.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: argo-server
                port: 
                  number: 80
